// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable button-vars button-primary root size-36 mode-solid uui-theme-loveship size-36 style-square"
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="uui-caption"
  >
    Test
  </div>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;

exports[`Dropdown should be rendered correctly with extra props 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable button-vars button-primary root size-36 mode-solid uui-theme-loveship size-36 style-square"
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="uui-caption"
  >
    test
  </div>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;
